Fix for not centered images

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -59,6 +59,16 @@ div.media {
     width: 100%;
     height: 100%;
   }
+  &> img {
+    max-height: 100%;
+    max-width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+  }
   &> div {
     height: 100%;
   }
